Improve board visibility when fixed options

--- a/microservices/admin/imports/client/pages/LoanBoardPage/LoanBoardPage.scss
+++ b/microservices/admin/imports/client/pages/LoanBoardPage/LoanBoardPage.scss
@@ -7,6 +7,10 @@
     flex-grow: 1;
   }
 
+  .loan-board-options.fixed + .board {
+    padding-top: 120px;
+  }
+
   &-options {
     display: flex;
     justify-content: space-between;
